# ChangeLog for sys-kernel/gentoo-sources
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/gentoo-sources/ChangeLog,v 1.1543 2015/05/01 15:37:26 jer Exp $

  01 May 2015; Jeroen Roovers <jer@gentoo.org> gentoo-sources-3.18.11.ebuild:
  Stable for PPC64 (bug #540866).

*gentoo-sources-3.14.40 (29 Apr 2015)

  29 Apr 2015; Mike Pagano <mpagano@gentoo.org> +gentoo-sources-3.14.40.ebuild:
  Linux patch 3.14.40

*gentoo-sources-3.19.6 (29 Apr 2015)

  29 Apr 2015; Mike Pagano <mpagano@gentoo.org> +gentoo-sources-3.19.6.ebuild:
  Linux patch 3.19.6

*gentoo-sources-4.0.1 (29 Apr 2015)

  29 Apr 2015; Mike Pagano <mpagano@gentoo.org> +gentoo-sources-4.0.1.ebuild:
  Linux patch 4.0.1

*gentoo-sources-3.18.12 (27 Apr 2015)

  27 Apr 2015; Mike Pagano <mpagano@gentoo.org> +gentoo-sources-3.18.12.ebuild:
  Linux patch 3.18.12

  21 Apr 2015; Pacho Ramos <pacho@gentoo.org> gentoo-sources-3.18.11.ebuild:
  ppc stable wrt bug #540866

*gentoo-sources-3.19.5 (20 Apr 2015)

  20 Apr 2015; Mike Pagano <mpagano@gentoo.org> +gentoo-sources-3.19.5.ebuild:
  Linux patch 3.19.5

*gentoo-sources-3.14.39 (20 Apr 2015)

  20 Apr 2015; Mike Pagano <mpagano@gentoo.org> +gentoo-sources-3.14.39.ebuild:
  Linux patch 3.14.39

*gentoo-sources-3.10.75 (20 Apr 2015)

  20 Apr 2015; Mike Pagano <mpagano@gentoo.org> +gentoo-sources-3.10.75.ebuild:
  Linux patch 3.10.75

*gentoo-sources-3.10.74 (14 Apr 2015)

  14 Apr 2015; Mike Pagano <mpagano@gentoo.org> +gentoo-sources-3.10.74.ebuild:
  Linux patch 3.10.74. Add check to saved_root_name for supported filesystem
  path naming.

*gentoo-sources-3.14.38 (14 Apr 2015)

  14 Apr 2015; Mike Pagano <mpagano@gentoo.org> +gentoo-sources-3.14.38.ebuild:
  Linux patch 3.14.38. Add check to saved_root_name for supported filesystem
  path naming.

*gentoo-sources-3.19.4 (14 Apr 2015)

  14 Apr 2015; Mike Pagano <mpagano@gentoo.org> +gentoo-sources-3.19.4.ebuild: