@@ -16,6 +16,9 @@ DIST genpatches-3.12-39.extras.tar.xz 18232 SHA256 e3676ca478b65884474924747d36a
 DIST genpatches-3.12-40.base.tar.xz 1270064 SHA256 268a8ebb7351c6431054cac9689cdb594d31914e6d33497225a938c1be573781 SHA512 e6be449d8205f7e393d935b2564306b698e38469e364d1a905c900c294cfdaf33ae080cd889c6642391c9f450151baea9a022c09233457207f80ca31ed04d8ff WHIRLPOOL 550d24e359bc8b3494aefb65368e824747e29457af0e84bf47ac6c3d2e78dc3eee39f86caef99688e4e8fced680f96e89e005d88628eeb28d1ac8918f206f2ef
 DIST genpatches-3.12-40.experimental.tar.xz 46540 SHA256 5ddc0cfecd62ab3c038a6d881e4ee98746eb942d73865ff643f77cbed12f16f0 SHA512 5f76006bcc1f72a15de6255caf42414f99d7cac9dc3701bd7331248be6db913be0ae27c65478b4231bc1fe8288d9a79a81f2589f1a32dc5e95c37d6d18052ddc WHIRLPOOL c979b58cd8a07a58bab5fbfc8b47ada4e80a57136cf2580b3eaaa96ab222760460e22ea980a11db744befd20f264137058d7e8edeeb1d36de8ff118e537866b6
 DIST genpatches-3.12-40.extras.tar.xz 18244 SHA256 7782088c68a4c36a1c3757c25f5739a5223fa29e2dc3e0cad58db06296c3a3f5 SHA512 09d14a49fb51c866af7053307d3e4f34b9f70740e566bf26980dae5e5f7bf031a644c11647a9bec38f37e94289c8f4d39d7271b5dfc5aff7b4711d062b0a5836 WHIRLPOOL abb9faebcb6f1dfb1f558d623ef3b56c2d0eb5cba7458f004540bfe71384af37461c743870cd5021e7d16f57073c3d14990e490344ae788139b8f9d2be19f744
+DIST genpatches-3.12-41.base.tar.xz 1302260 SHA256 44264a5a09407fe86084e7aec79abe8862aafa480b9d20c627df3c39cf94d82a SHA512 f5bd6c3e7048f81808d51d0717e3e1a603d18cc675a0635eb501d71a3d320708bc6a9763a128c17232182325efce42abcd522925f4f835d70556228462ab1425 WHIRLPOOL 61e694de5a54acc05b276e3288a8c2535dbcda28484f1ad5f941e7ce18c2c6b0291f62a108c9538ecc31889870208e1ee7680b0c26fe7f6193bf4bfb4790df14
+DIST genpatches-3.12-41.experimental.tar.xz 46528 SHA256 3a514cbf4c612c9c7a16375014cdae815e5980ad00a4684853a504abfcab42ad SHA512 7dc9bfe881e2157fb838e6aad288ac7f7542419dcec12bfdf0bbbb8079479ee870cfda2cf1dbc86095ad78403cc3bf98411f30527cd3d2e2ae4161c4a5be3cea WHIRLPOOL a4ec20b3c1fd3beaa985d53aaf9b8e86649b4ac627ae8aa8f20185e2fe3fdad3c5c63e9b74a0f75abebc0fbd52c566861de84929c2ff1de51dde373c618bb93c
+DIST genpatches-3.12-41.extras.tar.xz 18220 SHA256 c0964c2236afc5fc5bfcc460277d357402e310017d8264f6efa12ea2d2d59bd5 SHA512 015650b12f02aa174df7e6142a1a20b687c063585f4455da4b8543f40af5b84bbf13e2742d6b6da276b57348e60ea637f29ec544dc020ebb125673b082a55f4b WHIRLPOOL f46ec917876a4b45b724b41264133c4f2a7bae79f93a53562023a3cc299dcd63698cf010853e08b4f814e1e3cbdb56871db1833ed9a3f4b3cb0785b4e31a0265
 DIST genpatches-3.14-42.base.tar.xz 881468 SHA256 f4b7deef8842326755a6b54199b559151aadb6ae017faec56a2c17ccafbda7a0 SHA512 b51180aeef5d7acdd6c261e896dbc07a1a452d8e551b13df67d5f5b2dfe0df689a4f6e6517d154a1d0b6dece40387461df44ac53b701b24ac8f39f40bb55a40e WHIRLPOOL dd446413b17c88e4b932c0862326fe3f713a74a328bb70a4756daf13d5b3f1d0cedb9ec5338e46c7917a7a1a7c76276fe84c4b3b795f600bc81083806bf15395
 DIST genpatches-3.14-42.experimental.tar.xz 60324 SHA256 f2ba54de5a767fa09366568e75f93cf213e0e297d6a749dc94e6f5718b84543e SHA512 5b15bc9c56131323f5b96fd78032dd87c4ebed2b77d13bdeef887372c357da073f0062fa70f314947d517c99ce7321a26d44a82624545dba47cea05b449cc832 WHIRLPOOL 1d24eb22d8f95fd865a6497bc14eca7353f34198042740f3cdb26ab8c8fae5daea65e5fb3e37fa617b5541a8080e3328d232b9131500cc2c70492f7c38841ed3
 DIST genpatches-3.14-42.extras.tar.xz 18260 SHA256 48085c3ceea449f1a1257e2ac5f0fc81a72eddee616828e4c4253e0bdd3604ba SHA512 baf0657a26356250946a70e6987b353efacaa768d0591a3ddcefea7b13dac83d27fb65ca6532b4c6d7e27f74080f8a54aa4ac92a5b2c357103bdc8b015a4b0d3 WHIRLPOOL a33ff402b9bf261879e8ff958c6363dc677106203eb5cd50d912b70a59a2ec1c12463b07f8add9531c69dc7fbc4a5e21e44cca2fd210406e4232948511b31dd8
@@ -73,6 +76,7 @@ EBUILD gentoo-sources-3.10.75.ebuild 895 SHA256 f277feac4b9956b3161e1c5529c5e69f
 EBUILD gentoo-sources-3.10.9999.ebuild 2263 SHA256 08f2207c5cbea70db164f6d23777bc8fa3de23aaa6b97d1f438ad63e9eee1f99 SHA512 ea294e6ed9b1afd15a34e2c51b341aca146f76260c52f7b75827dc6a8cde2987dd475ddd329ff4d98442d889a5cb8661c4788336221eeeaa2acbd91fa6dd6302 WHIRLPOOL 62295be076bd323b4aa3f8826a95677f22a1a7f0c4c6cb18033033cc2fbcb1b06c42b61bc89922d6a2d7eefbf33ae792e55ec74c7eafc30158c7c71418dab484
 EBUILD gentoo-sources-3.12.39.ebuild 885 SHA256 5a98a808c1ce3538022478f9b1132b26e874441f24cefd8aa94e9d5436895646 SHA512 b16d3b62db11fd02947c5686057ffc7e11a5d821ed90a2155204176bc18dc8fe977b85315b6279b89c464aa4d2d52088740f4331772537bd6d57fa0cd40a93b2 WHIRLPOOL e635407e3c61d6406dc66c1eda7e0175f6f6c5bf5d9110729f16c1117a004233379a86daf7e923ab4f0e22448c7d3261287dbbfb7e04b22e6b7e1d257d1e8a70
 EBUILD gentoo-sources-3.12.40.ebuild 894 SHA256 0251fcf989720ba7f1b1dfbb58b48a8a31e20301d6bfefdfbf9cba7ab60fc759 SHA512 9bdd8b17b00095c7ba647a8c3112a9ae6abf68e3bacb16ce416d26af9a1ef6076a2f156f9a5e53e9c27bef137c5702457b1af3182530e814a4abc1bc831eba34 WHIRLPOOL a006602b9829f1d1556014e85834c3bcf956d62db17fd3d7b44f79918835d3d9758901f7b2d6074db5d741c16d264ef52741d0721752c9f7cb1dde9f129db712
+EBUILD gentoo-sources-3.12.42.ebuild 894 SHA256 675cc680d502dc443733d60df6d29c44f263781277d51d00d7445369069433d6 SHA512 15475b5d96d5df2c432e4713ff94ced817a072e5b2fe61a5059c6f598efdf466c25c4ed0e831aae281e93fd43ae9f867aa02fd2b0ceb6f8ddd40978b40f91696 WHIRLPOOL e974283a56de85d3dd7ab2ad480d3bf9d1c35a786e615701cf4b472d427c1f3417efcb334e004300ec6e53421ee8c5b08b222caf8f4e36c5cb155aaa9df11388
 EBUILD gentoo-sources-3.12.9999.ebuild 2263 SHA256 6ae23a651afb1a341a31added7ffbb6734b385138919317bdf6f86ba15f8f0e6 SHA512 4519604e13b1eeeccb71c5ef0ddd989c1ee647d6b638eea07fbe70710374b933f7aa7d2175e805524be363211ac5737ef9d3d85461d7d413de08fdc097698f33 WHIRLPOOL 2930ffdc64be02af45f7e3259eb1b0c4bb3983fd4b99452954a971995b71b18bb5e4961f1a0228a4d4881c8b90510474b0e781e0d3828213111501ba91b0c25f
 EBUILD gentoo-sources-3.14.37.ebuild 894 SHA256 acc1fda1a375469429060866a33622864ba65a8bcd3c8cb4d08bd02bec066d17 SHA512 596267fcc168950f64e1c64495550e34af260d7b329cc225d1983f95eb1773a4327ad06b03dd79c371488cc7c27da9c6c784f02c6605bc92d288b913ce1e295b WHIRLPOOL 5c3811ac769c9b53fe8b87664823566995f531ba32a91bd48d7cfbce0d192ce952b8bad6043b13dffe328553b6f7fb5ae5267342a3e2d98c7803b9014bfa35e3
 EBUILD gentoo-sources-3.14.38.ebuild 901 SHA256 a8579b9b5303ba1cf7f2406539fa85c1c91b5132bcc501c533f97ff490dc1a7f SHA512 56a13b5bf58f1cea3f68e905cd56cf199ce2f5b5edcb5ba077dbfd0b67cd9ed77815ff9c49ca848c1c887c69af5837f9461b2f7d58d1613433e89c2ba91adedc WHIRLPOOL 1b1ed404fb924afc4468cd83a44b6a2e839aab2642aed68b38ec21a2b506286d2c46ea68bdd4f82830f1a3e3ba0c22caf5f52d0b969baa5e545573359dcfa1e5
@@ -90,14 +94,14 @@ EBUILD gentoo-sources-3.4.106.ebuild 862 SHA256 a0f88d28e7fedea5985d0d3ab5e5fa2c
 EBUILD gentoo-sources-3.4.9999.ebuild 2262 SHA256 5c40a937692469c313f62bc8aa6909f78b65d98b7e8865e66c4b4fd9f51c40aa SHA512 f896d03460b4c2a470a94cc250d4e4970a7e7f6293e36cb407ecd767f147ef858790a4fb5535d4aa9ea24edc5cee8e87c529c72b32fd4016c0d74dfcc8711caa WHIRLPOOL 7d8c2db2f783641e744d4ade8328a2f2869edab5a8c7291a35e14a497dbcfb5b5430f86fba6ef91645433fafaae21497a851519f7f44234e3dbe39b161c61d5e
 EBUILD gentoo-sources-4.0.0.ebuild 898 SHA256 b414a4348a54e3e7c1aee9ffd0e4d0c7a1e25270ce8989a182085d069c2ab361 SHA512 90c81b8922a70f313ca933c952e1feca72c89d67683a20520fcd663dec0a9cc0b9d72b696a689b081b056e3c755ae3eef97e19ad8d763c672cfd08444f97fea9 WHIRLPOOL 584622e3b9ba7a399be43aed851e5083444d7765cf3721b61536e12e4074777211afc0ddbe5b463943995bf9f28e872315c1b7ad50013939c1efc8e60ff17a1d
 EBUILD gentoo-sources-4.0.1.ebuild 898 SHA256 7287382a327b47ddd4888115badabc72dd20e4e1dd54f9c3367d810668233774 SHA512 506944fdc587794b7c773c1e90f2e64bba0304e6e7bf440eec953023b9134263e34c6fc213da7fbea185e10fd8fd492b0d017ff2782c7c65ca0e96516fb0f570 WHIRLPOOL c526eb66446b10f6ff8a2ffc3d69e429e3a1fa3d62e5a8e5f9212340dceb8a8cc48341da952d569a7e7ab4d087802bc3cae0403c59a0e8a431ca530f4297a6fb
-MISC ChangeLog 107921 SHA256 7fd2cfc74d79139419c5728294f926da7142627d91e8d39e49f253e7d1e57641 SHA512 63164546c94cc67944be82b5e0427af50a465bb7f309fe440611b743bf9e8231f669e057fa22f77f7884cc06dee05405db0102a16bac0d8bc1e6a35b8f26493c WHIRLPOOL f81ac0d83760b96b28b4e096cf6258f204d11d9f8bb8befa5a910b8fa69c16b94361f01c6dc83c547475b259758e9ca67aa03bdc01183e9b8261b1790b6279a6
+MISC ChangeLog 108089 SHA256 edfafbf33395354e5be21f2cd887e74ef0c3dc6cc2b19a8d25cb7cf55d0c1b1f SHA512 8d60feaa5f4dc0c401f7923b9a00b5f4aa498f68f6e642df81e2db6961b5b301c61f7a4df18002e3f5da021fa86bb39396cd9cc38d579534980b890cb0352ca1 WHIRLPOOL 913e822f752a42f36db8bbbe061371b02f536ab523015242c8c58599e1306535fdb4a71cdbd5a084486b07dfd5320ba56e8aa8fc5ab5c7bf13f0b10a50ef6b27
 MISC ChangeLog-2007 91971 SHA256 8c37498df2246749abb2fd1eca05c396257989b91ba5ec0f83cedb25488118a9 SHA512 2215a9856bc1706abe21ad51d0af6176fec226e85a56ad8f54664d20a041bbe076359347f473a87c47904df2d8d2006d56d1535528b2eb7aa756f96ad9554876 WHIRLPOOL dd881fa7bbfc42ca35a46a0fe01d751b3373ac8f4e2ce5626ff26f94244d729e107f57b1be43daf3b73c2f18b090ee896d8a5eb38888fa9ca01097d1cbd46da7
 MISC ChangeLog-2012 101665 SHA256 a60304f93fc4644cdf0b068e586f6036d4463ea4b21bd745a8aa926da71db6ec SHA512 892085806f4c87f64db78e04d3c215ae6bca8939ffeced8a3792fe4a2476e72d2cc9dbc8a3b906943971eb853c337847e6a8bf976f9496be9944e216fb983234 WHIRLPOOL 590f17b5a90f48fa1733959500ce06fd72f95524b64b6abf508653a616961af2c0ea04ca2dbfe5523ff9dcd3bc67b3b24bc368eb84326d091ca449e558555f46
 MISC metadata.xml 512 SHA256 80143273f4462ac67194f8ef90706e5ebf65f3f30ff153b7ee19d2c155f49f7b SHA512 6262ba3cbc6480081a195024fc752ad0df27afe9b71d626d759f747a52a2a181d114379e463bd8741a843622556c1e46820e535e8fbe71e2790828370d70c5f0 WHIRLPOOL b4430c0590efa2c5cbfc85fed1386943f4c8d101dfc07a76ba79c37b1fe2fe4db21f65b58186e1cad1ea3987292c2ea0251f0e2017be018c020f7e2309b57bd1
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlVDnbcACgkQVWmRsqeSphP8mQCdHJZUO2QfVEYmmwpbKOJPdbUf
-550An0+x/0pPapKOvX3+qe5tzHVzIp1u
-=HeCR
+iEYEAREIAAYFAlVJHzUACgkQPDPGULV25OO2AQCfdzpkqP4eGY5UqEqPlSn7ird/
+RXUAoIK8hnDrhzVeA7tqZgU2zbQ1/1tw
+=j1MQ
 -----END PGP SIGNATURE-----
